simple/test/features/errors/runtime/e3002_index_out_of_bounds.spl
# E3002: Index Out of Bounds

Feature: E3002 - Index Out of Bounds for Array
  As a Simple runtime
  I want to detect out-of-bounds array access
  So that memory safety is maintained

  Background:
    Given I have the Simple runtime

  Scenario: Array index too large
    When I run:
      '''
      fn test():
        val arr = [1, 2, 3]
        val x = arr[5]  # Runtime error: index 5 out of bounds for length 3
      '''
    Then I should see runtime error E3002
    And the error message should be "index {index} out of bounds for array of length {length}"
    And the label should indicate "index out of bounds"
    And the help should suggest "ensure the index is within the valid range [0, {length})"

  Scenario: Negative index
    When I run:
      '''
      fn test():
        val arr = [1, 2, 3]
        val x = arr[-1]  # Runtime error if negative indices not supported
      '''
    Then I should see runtime error E3002

  Scenario: Valid array access
    When I run:
      '''
      fn test():
        val arr = [1, 2, 3]
        val x = arr[1]  # OK: result is 2
      '''
    Then execution should succeed

  Scenario: Korean language error
    Given I set runtime language to "ko"
    When I run:
      '''
      fn test():
        val arr = [1, 2, 3]
        val x = arr[10]
      '''
    Then I should see runtime error E3002
    And the error message should contain "인덱스 범위 초과"
